// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FailureInstancePanelControlTest render FailureInstancePanelControl: create without instance 1`] = `
<React.Fragment>
  <CustomizedActionButton
    ariaDescription="Open add a failure instance panel"
    ariaLabel="Add a failure instance"
    iconProps={
      Object {
        "iconName": "Add",
      }
    }
    onClick={[Function]}
  >
    Add a failure instance
  </CustomizedActionButton>
  <GenericPanel
    className="failure-instance-panel"
    closeButtonAriaLabel="Close failure instance panel"
    hasCloseButton={true}
    isOpen={false}
    onDismiss={[Function]}
    title="Add a failure instance"
  >
    <FlaggedComponent
      enableJSXElement={
        <FailureInstancePanelDetails
          onSelectorChange={[Function]}
          onValidateSelector={[Function]}
          path={null}
          snippet={null}
        />
      }
      featureFlag="manualInstanceDetails"
      featureFlagStoreData={Object {}}
    />
    <StyledTextFieldBase
      className="observed-failure-textfield"
      label="Comment"
      multiline={true}
      onChange={[Function]}
      placeholder="Comment"
      resizable={false}
      rows={8}
      styles={[Function]}
      value={null}
    />
    <div
      className="footer"
    >
      <ActionAndCancelButtonsComponent
        cancelButtonOnClick={[Function]}
        isHidden={false}
        primaryButtonDisabled={true}
        primaryButtonOnClick={[Function]}
        primaryButtonText="Add failed instance"
      />
    </div>
  </GenericPanel>
</React.Fragment>
`;

exports[`FailureInstancePanelControlTest render FailureInstancePanelControl: edit without instance 1`] = `
<React.Fragment>
  <StyledLinkBase
    className="edit-button"
    onClick={[Function]}
  >
    <StyledIconBase
      ariaLabel="edit instance"
      iconName="edit"
    />
  </StyledLinkBase>
  <GenericPanel
    className="failure-instance-panel"
    closeButtonAriaLabel="Close failure instance panel"
    hasCloseButton={true}
    isOpen={false}
    onDismiss={[Function]}
    title="Edit failure instance"
  >
    <FlaggedComponent
      enableJSXElement={
        <FailureInstancePanelDetails
          onSelectorChange={[Function]}
          onValidateSelector={[Function]}
          path={null}
          snippet={null}
        />
      }
      featureFlag="manualInstanceDetails"
      featureFlagStoreData={Object {}}
    />
    <StyledTextFieldBase
      className="observed-failure-textfield"
      label="Comment"
      multiline={true}
      onChange={[Function]}
      placeholder="Comment"
      resizable={false}
      rows={8}
      styles={[Function]}
      value={null}
    />
    <div
      className="footer"
    >
      <ActionAndCancelButtonsComponent
        cancelButtonOnClick={[Function]}
        isHidden={false}
        primaryButtonDisabled={true}
        primaryButtonOnClick={[Function]}
        primaryButtonText="Save"
      />
    </div>
  </GenericPanel>
</React.Fragment>
`;

exports[`FailureInstancePanelControlTest render FailureInstancePanelControl: partial original instance 1`] = `
<React.Fragment>
  <CustomizedActionButton
    ariaDescription="Open add a failure instance panel"
    ariaLabel="Add a failure instance"
    iconProps={
      Object {
        "iconName": "Add",
      }
    }
    onClick={[Function]}
  >
    Add a failure instance
  </CustomizedActionButton>
  <GenericPanel
    className="failure-instance-panel"
    closeButtonAriaLabel="Close failure instance panel"
    hasCloseButton={true}
    isOpen={false}
    onDismiss={[Function]}
    title="Add a failure instance"
  >
    <FlaggedComponent
      enableJSXElement={
        <FailureInstancePanelDetails
          onSelectorChange={[Function]}
          onValidateSelector={[Function]}
          path={null}
          snippet={null}
        />
      }
      featureFlag="manualInstanceDetails"
      featureFlagStoreData={null}
    />
    <StyledTextFieldBase
      className="observed-failure-textfield"
      label="Comment"
      multiline={true}
      onChange={[Function]}
      placeholder="Comment"
      resizable={false}
      rows={8}
      styles={[Function]}
      value="original text"
    />
    <div
      className="footer"
    >
      <ActionAndCancelButtonsComponent
        cancelButtonOnClick={[Function]}
        isHidden={false}
        primaryButtonDisabled={false}
        primaryButtonOnClick={[Function]}
        primaryButtonText="Add failed instance"
      />
    </div>
  </GenericPanel>
</React.Fragment>
`;
